feat: fixed Authentication and Authorization and token carries user rol and type